--- a/pascoa.css
+++ b/pascoa.css
@@ -1,4 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Petit+Formal+Script&family=Send+Flowers&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap');
+
 body{background-color: #8CCFEA;}
 
-h1{color: #9E713F;
-   text-align: center; }
+header > h1{color: #9E713F;
+            text-align: center;
+            font-family: 'Petit Formal Script', cursive;
+            font-size: 50px;
+            text-shadow: 1px 1px 3px brown;
+            padding-bottom: 40px; }
+
+section{background-color: #4F889E ;
+        color: #EBBE8D;
+        width: 70%;
+        margin: auto;
+        border-radius: 6px;
+        box-shadow: 0.7px 0.7px 5px rgba(0, 0, 0, 0.76);
+        }
+
+section > p{font-family: 'Kalam', cursive;
+            padding: 10px;
+            font-size: 30px;
+            text-align: left;
+            text-indent: 20px;
+            line-height: 40px;}
+
+footer{background-color: #B3E9FF;
+       color: #9E713F;
+       margin: -8px -8px -16px -8px;}
+
+footer > p{font-family: Arial, Helvetica, sans-serif;
+           text-align: center;}
