--- a/pascoa.css
+++ b/pascoa.css
@@ -13,7 +13,7 @@ header > h1{color: #9E713F;
 
 section{background-color: #4F889E ;
         color: #EBBE8D;
-        width: 70%;
+        width: 82%;
         margin: auto;
         border-radius: 6px;
         box-shadow: 0.7px 0.7px 5px rgba(0, 0, 0, 0.76);
@@ -26,9 +26,29 @@ section > p{font-family: 'Kalam', cursive;
             text-indent: 20px;
             line-height: 40px;}
 
+div{background-color: #4F889E;
+       text-align: center;
+       color: #EBBE8D;
+       line-height: 500px;
+       font-size: 80px;
+       font-family: Georgia, 'Times New Roman', Times, serif;
+        width: 82%;
+        height: 500px;
+        max-width: 700px;
+        margin: auto;
+        border-radius: 6px;
+        box-shadow: 0.7px 0.7px 5px rgba(0, 0, 0, 0.76);}
+
 footer{background-color: #B3E9FF;
        color: #9E713F;
        margin: -8px -8px -16px -8px;}
 
 footer > p{font-family: Arial, Helvetica, sans-serif;
            text-align: center;}
+
+a{color: #9E713F;
+  text-decoration: none;}
+
+a:hover{color: rgb(95, 40, 12);}
+
+a:visited{color: rgb(95, 40, 12);}
